Bankruptcy visual bug fix
Fixed a bug in the bankruptcy screen where properties with particularly long names (e.g. Northumberland Avenue) caused the contents to spill out of their window. The names now wrap if required.

--- a/style.scss
+++ b/style.scss
@@ -3170,6 +3170,10 @@ body[bankruptcy-proceedings = "false"] #bankruptcy{
         width: 100%;
     }
 
+    .property-name{
+        white-space: normal;
+    }
+
     .house-visual-display{
         height: 26px;
         width: 110px;
